kubernetes/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: interview

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interviewdb
  namespace: interview
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: interviewdb
      version: 'v1'
  template:
    metadata:
      labels:
        app: interviewdb
        version: 'v1'
    spec:
      containers:
        - name: interviewdb
          image: vamsikkv/interviewdb:8
          ports:
            - name: http
              containerPort: 9600

#          resources:
#            requests:
#              memory: '512Mi'
#              cpu: '500m'
#            limits:
#              memory: '1Gi'
#              cpu: '1'
          readinessProbe:
            httpGet:
              path: /management/health
              port: 9600
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health
              port: 9600
            initialDelaySeconds: 120
