kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: interviewdb
  namespace: interview
  labels:
    app: interviewdb
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"

spec:
  selector:
    app: interviewdb
  sessionAffinity: ClientIP
  type: LoadBalancer
  ports:
    - name: http
      port: 9600
