kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: interviewdb
  namespace: interview
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "*"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # service.beta.kubernetes.io/do-loadbalancer-tls-passthrough: "true"
    # service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-type: "cookies"
    # service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-cookie-name: "mycookiename"
    # service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-cookie-ttl: "60"


spec:
  rules:
    - host: intervu.tech
      http:
        paths:
          - path: /
            backend:
              serviceName: interviewdb
              servicePort: 9600
    - http:
        paths:
          - path: /
            backend:
              serviceName: interviewdb
              servicePort: 9600
